--- a/MessagingServiceApp/MessagingServiceApp.csproj
+++ b/MessagingServiceApp/MessagingServiceApp.csproj
@@ -24,6 +24,9 @@
     <Folder Include="Data\" />
     <Folder Include="Data\Entity\" />
     <Folder Include="Dto\" />
+    <Folder Include="Dto\ApiParameter\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
     <Folder Include="Dto\ApiResponse\" />
     <Folder Include="Libraries\" />
   </ItemGroup>
