--- a/MessagingServiceApp/appsettings.json
+++ b/MessagingServiceApp/appsettings.json
@@ -9,5 +9,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "JwtToken": {
+    "Key": "",
+    "Issuer": "",
+    "Audience": ""
   }
 }
