--- a/MessagingServiceAppTest/MessagingServiceAppTest.csproj
+++ b/MessagingServiceAppTest/MessagingServiceAppTest.csproj
@@ -11,6 +11,13 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="Moq" Version="4.14.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MessagingServiceApp\MessagingServiceApp.csproj" />
+  </ItemGroup>
 </Project>
