Docker configurations were done, application was dockerized

--- a/MessagingServiceApp/appsettings.json
+++ b/MessagingServiceApp/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=db;Database=MessagingDB;User=SA;Password=;"
   },
   "JwtToken": {
     "Key": "",
