--- a/MessagingServiceApp/Properties/launchSettings.json
+++ b/MessagingServiceApp/Properties/launchSettings.json
@@ -11,7 +11,7 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -19,9 +19,9 @@
     },
     "MessagingServiceApp": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://+:80",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
