MongoDB driver package was installed and configuration was done

--- a/MessagingServiceApp/appsettings.json
+++ b/MessagingServiceApp/appsettings.json
@@ -14,5 +14,10 @@
     "Key": "",
     "Issuer": "",
     "Audience": ""
+  },
+  "MongoDatabaseSettings": {
+    "MessageInfosCollectionName": "messageInfos",
+    "ConnectionString": "",
+    "DatabaseName": "messagingServiceApp"
   }
 }
