AutoMapper package was added and Dto/AutoMapping folder was created

--- a/MessagingServiceApp/MessagingServiceApp.csproj
+++ b/MessagingServiceApp/MessagingServiceApp.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.3" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -30,5 +31,6 @@
     <Folder Include="Services\" />
     <Folder Include="Dto\ApiResponse\" />
     <Folder Include="Libraries\" />
+    <Folder Include="Dto\Mapping\" />
   </ItemGroup>
 </Project>
