--- a/MessagingServiceApp/MessagingServiceApp.csproj
+++ b/MessagingServiceApp/MessagingServiceApp.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.3" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
