Mongo configurations was added to docker-compose.yml

--- a/MessagingServiceApp/appsettings.json
+++ b/MessagingServiceApp/appsettings.json
@@ -17,7 +17,7 @@
   },
   "MongoDatabaseSettings": {
     "MessageInfosCollectionName": "messageInfos",
-    "ConnectionString": "",
+    "ConnectionString": "mongodb://mongo:27017",
     "DatabaseName": "messagingServiceApp"
   }
 }
