--- a/MessagingServiceApp/docker-compose.yml
+++ b/MessagingServiceApp/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.3"
 services:
     web:
         build: .
@@ -6,6 +6,7 @@ services:
             - "5000:80"
         depends_on:
             - db
+            - mongo
     db:
         image: "microsoft/mssql-server-linux"
         environment:
@@ -13,3 +14,8 @@ services:
             ACCEPT_EULA: "Y"
         ports: 
           - "1433:1433"
+    mongo:
+        image: mongo
+        restart: always
+        ports:
+            - 27017:27017
