--- a/MessagingServiceApp/MessagingServiceApp.csproj
+++ b/MessagingServiceApp/MessagingServiceApp.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="MongoDB.Driver" Version="2.11.3" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9" />
+    <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
