redis configurations were added to appsettings.json and docker-compose.yml

--- a/MessagingServiceApp/appsettings.json
+++ b/MessagingServiceApp/appsettings.json
@@ -16,8 +16,12 @@
     "Audience": ""
   },
   "MongoDatabaseSettings": {
-    "MessageInfosCollectionName": "messageInfos",
     "ConnectionString": "mongodb://mongo:27017",
-    "DatabaseName": "messagingServiceApp"
+    "DatabaseName": "messagingServiceApp",
+    "MessageInfosCollectionName": "messageInfos"
+  },
+  "RedisConfiguration": {
+    "Host": "redis",
+    "Port": 6379
   }
 }
