--- a/MessagingServiceApp/docker-compose.yml
+++ b/MessagingServiceApp/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         depends_on:
             - db
             - mongo
+            - redis
     db:
         image: "microsoft/mssql-server-linux"
         environment:
@@ -18,4 +19,8 @@ services:
         image: mongo
         restart: always
         ports:
-            - 27017:27017
+            - "27017:27017"
+    redis:
+        image: redis
+        ports:
+          - "6379:6379"
