BlockUsersCollectionName was added to MongoDatabaseSettings class and appsettings

--- a/MessagingServiceApp/appsettings.json
+++ b/MessagingServiceApp/appsettings.json
@@ -18,10 +18,11 @@
   "MongoDatabaseSettings": {
     "ConnectionString": "mongodb://mongo:27017",
     "DatabaseName": "messagingServiceApp",
-    "MessageInfosCollectionName": "messageInfos"
+    "MessageInfosCollectionName": "messageInfos",
+    "BlockUsersCollectionName": "blockUsers"
   },
   "RedisConfiguration": {
     "Host": "redis",
     "Port": 6379
-  }
+  },
 }
