--- a/MessagingServiceApp/appsettings.json
+++ b/MessagingServiceApp/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
   },
   "AllowedHosts": "*",
@@ -24,5 +27,5 @@
   "RedisConfiguration": {
     "Host": "redis",
     "Port": 6379
-  },
+  }
 }
