Code refactored for Account controller and service, jwt token expire hour setting was moved to appsettings file

--- a/MessagingServiceApp/appsettings.json
+++ b/MessagingServiceApp/appsettings.json
@@ -16,7 +16,8 @@
   "JwtToken": {
     "Key": "",
     "Issuer": "",
-    "Audience": ""
+    "Audience": "",
+    "ExpireHour": 3
   },
   "MongoDatabaseSettings": {
     "ConnectionString": "mongodb://mongo:27017",
