Code refactored for Message controller and service, messageItemAmountPerPage setting was moved to appsettings file

--- a/MessagingServiceApp/appsettings.json
+++ b/MessagingServiceApp/appsettings.json
@@ -28,5 +28,8 @@
   "RedisConfiguration": {
     "Host": "redis",
     "Port": 6379
+  },
+  "Settings": {
+    "MessageItemAmountPerPage": 3
   }
 }
