appsettings.Development.json file was filled for docker local development environment

--- a/MessagingServiceApp/appsettings.Development.json
+++ b/MessagingServiceApp/appsettings.Development.json
@@ -1,9 +1,35 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db;Database=MessagingDB;User=SA;Password=Psswrd123;"
+  },
+  "JwtToken": {
+    "Key": "*localhost",
+    "Issuer": "localhost",
+    "Audience": "localhost",
+    "ExpireHour": 3
+  },
+  "MongoDatabaseSettings": {
+    "ConnectionString": "mongodb://mongo:27017",
+    "DatabaseName": "messagingServiceApp",
+    "MessageInfosCollectionName": "messageInfos",
+    "BlockUsersCollectionName": "blockUsers"
+  },
+  "RedisConfiguration": {
+    "Host": "redis",
+    "Port": 6379
+  },
+  "Settings": {
+    "MessageItemAmountPerPage": 3
   }
 }
