Development env sql db password removed from appsettings file and Readme.md file updated for that

--- a/MessagingServiceApp/appsettings.Development.json
+++ b/MessagingServiceApp/appsettings.Development.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Database=MessagingDB;User=SA;Password=Psswrd123;"
+    "DefaultConnection": "Server=db;Database=MessagingDB;User=SA;Password=...;"
   },
   "JwtToken": {
     "Key": "*localhost",
